[package]
name = "brief"
version = "0.1.0"
authors = ["Marcel Müller <neikos@neikos.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot-async-raw = "0.8.2"
async-trait = "0.1.24"
brief_derive = { path = "../brief_derive/" }
tokio = { version = "0.2.11", features = ["full"] }
hyper = "0.13.2"
thiserror = "1.0.11"
reqwest = "0.10.1"

[dev-dependencies]
anyhow = "1.0.26"
